--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "normalize-url": "^6.0.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
